common-base/storefront-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefront
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: $(VC_STOREFRONT_SERVICE)
spec:
  ports:
  - port: 80
  type: LoadBalancer
