common-base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: govirto.com
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
